# Othello

./: .gitignore  Board.qml  CMakeLists.txt  Disk.qml  GameOver.qml  GamePage.qml  Loading.qml  Main.qml  MainMenu.qml  OthelloBoard.cpp  OthelloBoard.h  OthelloModel.cpp  OthelloModel.h  PTimer.qml  PassTrun.qml  PlayerHearts.qml  PlayerName.qml  PlayerScore.qml  PlayerTimer.qml  PlayersModel.cpp  PlayersModel.h  PlayersNameItem.qml  PlayersTimerRect.qml  README.md  SwapList.cpp  SwapList.h  Timer.cpp  Timer.h  TurnPass.qml  images.qrc  main.cpp  othellologic.cpp  othellologic.h  player.cpp  player.h
